--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,20 @@
-# .gitignore                                                       -*- conf -*-
-
-# Editor backup files
-*~
-
-# Compiled Haskell
-*.hi
+dist
+dist-*
+cabal-dev
 *.o
-dist/
-
-# Cabal stuff
+*.hi
+*.chi
+*.chs.h
+*.dyn_o
+*.dyn_hi
+.hpc
+.hsenv
 .cabal-sandbox/
 cabal.sandbox.config
+*.prof
+*.aux
+*.hp
+*.eventlog
+.stack-work/
+cabal.project.local
+.HTF/
